// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PriceLockup renders with default props 1`] = `
.c6 {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1;
}

.c5 {
  word-wrap: break-word;
  padding: 0;
  margin: 0;
  line-height: 1;
  font-size: 1.5rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.7px;
  -moz-letter-spacing: -0.7px;
  -ms-letter-spacing: -0.7px;
  letter-spacing: -0.7px;
}

.c4 {
  line-height: 1.5;
}

.c4 medium {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
}

.c0 {
  text-align: left;
}

.c2 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

@media (max-width:767px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c1 > *:not(:last-child) {
    margin-bottom: 0.25rem;
  }
}

@media (min-width:768px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c1 > *:not(:last-child) {
    margin-bottom: 0.25rem;
  }
}

@media (max-width:767px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }

  .c3 > *:not(:last-child) {
    margin-right: 0.25rem;
  }
}

@media (min-width:768px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }

  .c3 > *:not(:last-child) {
    margin-right: 0.25rem;
  }
}

@media (min-width:768px) {
  .c5 {
    font-size: 1.75rem;
    -webkit-letter-spacing: -0.8px;
    -moz-letter-spacing: -0.8px;
    -ms-letter-spacing: -0.8px;
    letter-spacing: -0.8px;
  }
}

<div
  class="c0 sc-bwzfXH c0 c1"
>
  <div
    class="c1"
  >
    <div
      class="c2 sc-htpNat c2 c3"
    >
      <div
        class="c3"
      >
        <span
          class="c4"
          data-testid="dollarSign"
        >
          $
        </span>
        <span
          class="c5"
          data-testid="priceValue"
        >
          25
        </span>
      </div>
      <span
        class="c6"
        data-testid="rateText"
      >
        /month
      </span>
    </div>
  </div>
</div>
`;

exports[`PriceLockup size prop is large renders 1`] = `
.c2 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 1.25rem;
  -webkit-letter-spacing: -1px;
  -moz-letter-spacing: -1px;
  -ms-letter-spacing: -1px;
  letter-spacing: -1px;
  line-height: 1.6;
  word-wrap: break-word;
  font-weight: 400;
}

.c2 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c7 {
  word-wrap: break-word;
  font-size: 1.25rem;
  -webkit-letter-spacing: -1px;
  -moz-letter-spacing: -1px;
  -ms-letter-spacing: -1px;
  letter-spacing: -1px;
  line-height: 1.6;
}

.c6 {
  word-wrap: break-word;
  padding: 0;
  margin: 0;
  line-height: 1;
  font-size: 2.75rem;
  font-weight: 300;
}

.c5 {
  color: #2a2c2e;
  font-weight: 400;
  font-size: 1.75rem;
  line-height: 1.3;
  -webkit-letter-spacing: -1.6px;
  -moz-letter-spacing: -1.6px;
  -ms-letter-spacing: -1.6px;
  letter-spacing: -1.6px;
}

.c0 {
  text-align: left;
}

.c3 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

@media (max-width:767px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }

  .c4 > *:not(:last-child) {
    margin-right: 0.5rem;
  }
}

@media (min-width:768px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }

  .c4 > *:not(:last-child) {
    margin-right: 0.5rem;
  }
}

@media (max-width:767px) {
  .c1 {
    display: block;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:768px) {
  .c1 {
    display: block;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:768px) {
  .c6 {
    font-size: 4.5rem;
    -webkit-letter-spacing: 0.2px;
    -moz-letter-spacing: 0.2px;
    -ms-letter-spacing: 0.2px;
    letter-spacing: 0.2px;
  }
}

@media (min-width:768px) {
  .c5 {
    font-weight: 300;
    font-size: 2.75rem;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }
}

<div
  class="c0 sc-bwzfXH c0 c1"
>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      top text
    </span>
    <div
      class="c3 sc-htpNat c3 c4"
    >
      <div
        class="c4"
      >
        <span
          class="c5"
          data-testid="dollarSign"
        >
          $
        </span>
        <span
          class="c6"
          data-testid="priceValue"
        >
          25
        </span>
      </div>
      <span
        class="c7"
        data-testid="rateText"
      >
        /month
      </span>
    </div>
  </div>
</div>
`;

exports[`PriceLockup size prop is medium renders 1`] = `
.c10 {
  padding: 0;
  margin: 0;
  border-width: 0;
  -webkit-transform: rotate(-0.00001deg);
  -ms-transform: rotate(-0.00001deg);
  transform: rotate(-0.00001deg);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 100%;
  height: 1px;
  background-color: #d8d8d8;
}

.c3 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 0.875rem;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
  line-height: 1.42857;
  font-weight: 500;
}

.c3 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c11 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 400;
}

.c11 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c9 {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
}

.c8 {
  word-wrap: break-word;
  padding: 0;
  margin: 0;
  line-height: 1;
  font-size: 1.75rem;
  -webkit-letter-spacing: -1.6px;
  -moz-letter-spacing: -1.6px;
  -ms-letter-spacing: -1.6px;
  letter-spacing: -1.6px;
  font-weight: 400;
}

.c7 {
  word-wrap: break-word;
  font-size: 1.25rem;
  -webkit-letter-spacing: -1px;
  -moz-letter-spacing: -1px;
  -ms-letter-spacing: -1px;
  letter-spacing: -1px;
  line-height: 1.6;
}

.c0 {
  text-align: left;
}

.c4 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

@media (max-width:767px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c2 > *:not(:last-child) {
    margin-bottom: 0.25rem;
  }
}

@media (min-width:768px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c2 > *:not(:last-child) {
    margin-bottom: 0.25rem;
  }
}

@media (max-width:767px) {
  .c6 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }

  .c6 > *:not(:last-child) {
    margin-right: 0.25rem;
  }
}

@media (min-width:768px) {
  .c6 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }

  .c6 > *:not(:last-child) {
    margin-right: 0.25rem;
  }
}

@media (max-width:767px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c1 > *:not(:last-child) {
    margin-bottom: 1rem;
  }
}

@media (min-width:768px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c1 > *:not(:last-child) {
    margin-bottom: 1rem;
  }
}

@media (max-width:767px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }

  .c5 > *:not(:last-child) {
    margin-right: 0.5rem;
  }
}

@media (min-width:768px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }

  .c5 > *:not(:last-child) {
    margin-right: 0.5rem;
  }
}

@media (min-width:768px) {
  .c8 {
    font-weight: 300;
    font-size: 2.75rem;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }
}

<div
  class="c0 sc-bwzfXH c0 c1"
>
  <div
    class="c2"
  >
    <span
      class="c3"
    >
      top text
    </span>
    <div
      class="c4 sc-htpNat c4 c5"
    >
      <div
        class="c6"
      >
        <span
          class="c7"
          data-testid="dollarSign"
        >
          $
        </span>
        <span
          class="c8"
          data-testid="priceValue"
        >
          25
        </span>
      </div>
      <span
        class="c9"
        data-testid="rateText"
      >
        /month
      </span>
    </div>
  </div>
  <hr
    class="c10"
  />
  <span
    class="c11"
  >
    bottom text
  </span>
</div>
`;

exports[`PriceLockup size prop is small renders 1`] = `
.c9 {
  padding: 0;
  margin: 0;
  border-width: 0;
  -webkit-transform: rotate(-0.00001deg);
  -ms-transform: rotate(-0.00001deg);
  transform: rotate(-0.00001deg);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 100%;
  height: 1px;
  background-color: #d8d8d8;
}

.c3 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 0.875rem;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
  line-height: 1.42857;
  font-weight: 500;
}

.c3 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c8 {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1;
}

.c7 {
  word-wrap: break-word;
  padding: 0;
  margin: 0;
  line-height: 1;
  font-size: 1.5rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.7px;
  -moz-letter-spacing: -0.7px;
  -ms-letter-spacing: -0.7px;
  letter-spacing: -0.7px;
}

.c6 {
  line-height: 1.5;
}

.c6 medium {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
}

.c0 {
  text-align: left;
}

.c4 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

@media (max-width:767px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c2 > *:not(:last-child) {
    margin-bottom: 0.25rem;
  }
}

@media (min-width:768px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c2 > *:not(:last-child) {
    margin-bottom: 0.25rem;
  }
}

@media (max-width:767px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }

  .c5 > *:not(:last-child) {
    margin-right: 0.25rem;
  }
}

@media (min-width:768px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }

  .c5 > *:not(:last-child) {
    margin-right: 0.25rem;
  }
}

@media (max-width:767px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c1 > *:not(:last-child) {
    margin-bottom: 0.5rem;
  }
}

@media (min-width:768px) {
  .c1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c1 > *:not(:last-child) {
    margin-bottom: 0.5rem;
  }
}

@media (min-width:768px) {
  .c7 {
    font-size: 1.75rem;
    -webkit-letter-spacing: -0.8px;
    -moz-letter-spacing: -0.8px;
    -ms-letter-spacing: -0.8px;
    letter-spacing: -0.8px;
  }
}

<div
  class="c0 sc-bwzfXH c0 c1"
>
  <div
    class="c2"
  >
    <span
      class="c3"
    >
      top text
    </span>
    <div
      class="c4 sc-htpNat c4 c5"
    >
      <div
        class="c5"
      >
        <span
          class="c6"
          data-testid="dollarSign"
        >
          $
        </span>
        <span
          class="c7"
          data-testid="priceValue"
        >
          25
        </span>
      </div>
      <span
        class="c8"
        data-testid="rateText"
      >
        /month
      </span>
    </div>
  </div>
  <hr
    class="c9"
  />
  <span
    class="c3"
  >
    bottom text
  </span>
</div>
`;
